<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="@string/list_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_maps"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="@string/map_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_mortgage_simulation"
        android:enabled="true"
        android:icon="@drawable/ic_equalizer"
        android:title="@string/simulation"
        app:showAsAction="ifRoom" />
</menu>